--- a/list.html
+++ b/list.html
@@ -4,8 +4,8 @@
     <title>Lab3</title><meta charset = "utf-8"/>
 </head>
 <body>
-<img sec="image/logo.jpg" width="200px" height="100px"/>
-<img sec="image/suc.jpg" width="200px" height="100px"/>
+<img src="image/logo.jpg" width="200px" height="100px"/>
+<img src="image/suc.jpg" width="200px" height="100px"/>
 <a href="list.html">网站首页</a>
 <a href="list.html">关于我们</a>
 <a href="list.html">新闻中心</a>
@@ -14,14 +14,14 @@
 <a href="list.html">成功案例</a>
 <a href="list.html">联系我们</a>
 <a href="list.html">行业投资</a>
-<img sec="image/suc2.jpg" width="100px" height="60px"/><br/>
+<img src="image/suc2.jpg" width="100px" height="60px"/><br/>
 >><a href="list.html">网站首页</a>-新闻中心<br/>
 <a href="list.html">成功案例</a><br/>
-<img sec="image/f1.jpg" width="400px" height="200px"/><br/>
-<img sec="image/f2.jpg" width="400px" height="200px"/><br/>
+<img src="image/f1.jpg" width="400px" height="200px"/><br/>
+<img src="image/f2.jpg" width="400px" height="200px"/><br/>
 <a href="list.html">热点新闻</a><br/>
-<img sec="image/f3.jpg" width="400px" height="200px"/><br/>
-<img sec="image/f5.jpg" width="400px" height="200px"/><br/>
+<img src="image/f3.jpg" width="400px" height="200px"/><br/>
+<img src="image/f5.jpg" width="400px" height="200px"/><br/>
 <a href="list.html">新闻中心</a><br/>
 <ul type="square">
 <li><a href="list.html">林业科学研究所举办的专业技术培训班</a>2017-02-12</li><br/>
