--- a/list.html
+++ b/list.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <img src="image/logo.jpg" width="200px" height="100px"/>
-<img sc="image/suc.jpg" width="200px" height="100px"/>
+<img src="image/suc.jpg" width="200px" height="100px"/>
 <a href="list.html">网站首页</a>
 <a href="list.html">关于我们</a>
 <a href="list.html">新闻中心</a>
