--- a/实验四/lab4.html
+++ b/实验四/lab4.html
@@ -55,7 +55,7 @@
 <a href="lab4.html"><img src="images1/f4.jpg" width="200px" height="50px"/></a><br/>
 <a href="lab4.html">联系我们</a><br/>
 电话：13988888888 QQ：88888888  地址：中山路888号<br/>
-<a href="https://www.baidu.com">百度</a>|<a href="http://www.sina.com.cn">新浪</a>|<a hef="http://www.sohu.com">搜狐</a>|<a href="http://www.qq.com">腾讯</a>|<a href="https://www.google.com.hk">谷歌</a><br/>
+<a href="https://www.baidu.com">百度</a>|<a href="http://www.sina.com.cn">新浪</a>|<a href="http://www.sohu.com">搜狐</a>|<a href="http://www.qq.com">腾讯</a>|<a href="https://www.google.com.hk">谷歌</a><br/>
 Copyright &copy 2017 wenjianhongfen,All RIghts Reserved<br/>
 温州红枫生态发展有限公司&reg版权所有
 </body>
