--- a/lab 8/center.html
+++ b/lab 8/center.html
@@ -14,7 +14,7 @@
                 <table width="60%" background="images/banner.jpg">
                     <tr class="menu">
                         <td height="75px">首页</td>
-                        <td  class="a1"><a href="index.html">学校概况</a></td>
+                        <td><a href="index.html">学校概况</a></td>
                         <td><a href="index.html">规章制度</a></td>
                         <td><a href="index.html">德育网</a></td>
                         <td><a href="index.html">教研网</a></td>
@@ -51,11 +51,11 @@
                         <td width="30%">
                             <img src="images/hot.gif" alt="推荐热点" />
                             <ul>
-                                <li><a href="content.html?cid=1">我校举行五四表彰大会暨成人仪式</a></li>
-                                <li><a href="content.html?cid=2">河北中学4月份家长开放日公告</a></li>
-                                <li><a href="content.html?cid=3">教育处组织学生收看《2013年中小学…</a></li>
-                                <li><a href="content.html?cid=4">高一年级励志踏青活动花絮</a></li>
-                                <li><a href="content.html?cid=5">我校组织高一年级励志踏青活动</a></li>
+                                <li><a href="center.html">我校举行五四表彰大会暨成人仪式</a></li>
+                                <li><a href="center.html">河北中学4月份家长开放日公告</a></li>
+                                <li><a href="center.html">教育处组织学生收看《2013年中小学…</a></li>
+                                <li><a href="center.html">高一年级励志踏青活动花絮</a></li>
+                                <li><a href="center.html">我校组织高一年级励志踏青活动</a></li>
                             </ul>
                             <img src="images/tjpic.gif" alt="推荐图文" />
                             <img src="images/pic.gif" alt="新闻图片" />
