--- a/lab 9/index.html
+++ b/lab 9/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title>实验8</title>
+		<title>实验九</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
@@ -114,8 +114,8 @@
 				<div class="inline">&nbsp; &nbsp; &nbsp; &nbsp; Copy&nbsp; right&nbsp; c2013-2014&nbsp; Hebshufajia.com,All&nbsp; RightsReserved<br/></div>
 				<div class="inline">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 冀ICP备05067799号&nbsp; 冀公网安备110402440008号</div>
 			</ul>
-			
-			
+
+
 		</div>
 	</body>
 </html>
