--- a/web1-8/web1-8.html
+++ b/web1-8/web1-8.html
@@ -4,6 +4,7 @@
     <title>小米官网</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="web1-8.css">
+    <script src="web1-8.js"></script>
 </head>
 <body>
     <div id="box1">
@@ -102,7 +103,7 @@
     </div>
 
 </body>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
         var imag = document.getElementsByClassName("image");
                 imag[0].onmouseover = function(){
                     imag[0].children[5].className = "b3";
@@ -146,5 +147,5 @@
                 imag[6].onmouseout = function(){
                    imag[6].children[4].className = "b4";
                 }
-    </script>
+    </script> -->
 </html>
