--- a/html5唯美爱情表白动画网页代码/index.html
+++ b/html5唯美爱情表白动画网页代码/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -23,26 +23,25 @@
 </head>
 <body>
 <audio autoplay="autopaly">
-  <source src="renxi.mp3" type="audio/mp3" />
+  <source src="美丽之物.mp3" type="audio/mp3" />
 </audio>
 <div id="main">
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的小宝宝，我爱你，虽然你看不见我对你的告白</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">Ben,今天奏是你生日了</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+        <span class="say"> 虽然你经常欺负我，而且还不承认我帅的事实</span><br>
         <span class="say"> </span><br>
-        <span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
-        <span class="say">因为我太爱你了，所以我失去你了</span><br>
-        <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
-        <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
+        <span class="say">但，愿你每一天都开心快乐</span><br>
+        <span class="say">年年十九岁</span><br>
+        <span class="say">期末不挂科</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的仁希--</span> </font>
+        <span class="say"><span class="space"></span> -- 小仙女生日快乐--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的小宝宝，我喜欢你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00"></font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
@@ -53,13 +52,13 @@
 <script>
     (function(){
         var canvas = $('#canvas');
-		
+
         if (!canvas[0].getContext) {
             $("#error").show();
             return false;        }
 
         var width = canvas.width();
-        var height = canvas.height();        
+        var height = canvas.height();
         canvas.attr("width", width);
         canvas.attr("height", height);
         var opts = {
@@ -84,7 +83,7 @@
                     [546, 357, 608, 252, 678, 221, 6, 100, [
                         [590, 293, 646, 277, 648, 271, 2, 80]
                     ]]
-                ]] 
+                ]]
             ],
             bloom: {
                 num: 700,
@@ -108,7 +107,7 @@
             x = e.pageX - offset.left;
             y = e.pageY - offset.top;
             if (seed.hover(x, y)) {
-                hold = 0; 
+                hold = 0;
                 canvas.unbind("click");
                 canvas.unbind("mousemove");
                 canvas.removeClass('hand');
@@ -178,8 +177,8 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2016,9, 15); 			//时间年月日
-		    together.setHours(16);						//小时	
+		    together.setFullYear(1998,12, 24); 			//时间年月日
+		    together.setHours(16);						//小时
 		    together.setMinutes(53);					//分钟
 		    together.setSeconds(0);					//秒前一位
 		    together.setMilliseconds(2);				//秒第二位
