-第二次修改

--- a/html5唯美爱情表白动画网页代码/index.html
+++ b/html5唯美爱情表白动画网页代码/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>html5唯美爱情表白动画网页代码</title>
+<title>嗨皮波斯得图洪文瑛</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
@@ -31,19 +31,19 @@
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">Ben,今天奏是你生日了</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 虽然你经常欺负我，而且还不承认我帅的事实</span><br>
+        <span class="say"> 虽然你经常欺负我，而且还不承认我帅这个事实</span><br>
         <span class="say"> </span><br>
         <span class="say">但，愿你每一天都开心快乐</span><br>
         <span class="say">年年十九岁</span><br>
         <span class="say">期末不挂科</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 小仙女生日快乐--</span> </font>
+        <span class="say"><span class="space"></span> -- 生日快乐--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00"></font> <span class="STYLE1">已经是……</span>
+    <!-- <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00"></font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
-    </div>
+    </div> -->
     <canvas id="canvas" width="1100" height="680"></canvas>
   </div>
 </div>
