--- a/html5唯美爱情表白动画网页代码/index.html
+++ b/html5唯美爱情表白动画网页代码/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>嗨皮波斯得图洪文瑛</title>
+<title>Happy Birthday to HWY</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
 <script type="text/javascript" src="renxi/jscex.min.js"></script>
